{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "dbe39956-75db-43dc-aa35-add067e91276",
            "actions": [
                {
                    "name": "BuildMode",
                    "type": "Button",
                    "id": "eb3ac6f7-d470-4cac-8e96-2e755d11380f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitBuildMode",
                    "type": "Button",
                    "id": "f85c0cf7-c494-4b74-b643-088b9a1f585c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectNextBuild",
                    "type": "Button",
                    "id": "4a3a9502-84a5-4add-a6e0-9ae1b7ae39f2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectPrevBuild",
                    "type": "Button",
                    "id": "8d8d2090-20b1-4e0a-aa3a-fe1379edb658",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a8d7bfa-ef44-4977-ad09-7e51c47732ec",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e4d5304-18ea-4cc9-960a-8de068ea7950",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuitBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07ef379-eb52-4c04-ab4b-2c511097d125",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNextBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d399125-2206-4e2f-ae97-96b6c55a41f4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPrevBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}