{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Game",
            "id": "033ee448-9b33-422b-9c7b-dbedc5f2e4cc",
            "actions": [
                {
                    "name": "HookThrow",
                    "type": "Button",
                    "id": "e5581492-29e1-4cff-b9d1-a1bb98b8de53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HookBack",
                    "type": "Button",
                    "id": "cb787e7c-f9dc-413f-85ad-79659e48c5e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WaterBack",
                    "type": "Button",
                    "id": "110754e1-77b4-4884-a50a-2166265aef54",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9b3fc7ab-6c30-4908-9436-932582c00154",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HookThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "563fa3a1-d8ce-44a6-9c37-484342951a22",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HookBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75065339-341f-4305-bf03-6b68b8006ca5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WaterBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}